swj/webapi/user_api.yml
#定义对外访问的服务名字和端口
apiVersion: v1
kind: Service
metadata:
  name: user-svc            #服务名字
  namespace: api-swj     #命名空间
spec:
  selector:
    app: user-api           #        
  type: ClusterIP
  ports:
  - protocol: TCP   
    port: 10001  
    targetPort: 10001
    name: webapi
  - protocol: TCP   
    port: 10002  
    targetPort: 10002
    name: newthrift
  - protocol: TCP   
    port: 10003 
    targetPort: 10003
    name: oldthrift
---
apiVersion: v1
kind: Service
metadata:
  name: ovuser-svc
  namespace: api-swj
spec:
  type: ExternalName
  externalName: ovuser.czzrn9ip.com
  ports:
  - port: 10003
    targetPort: 10003
